--- a/package.json
+++ b/package.json
@@ -3,13 +3,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongodb": "^6.2.0"
+    "mongodb": "3.7"
   },
   "name": "favebook-server",
   "description": "",
   "version": "1.0.0",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "start": "node index.js",
     "start-dev": "nodemon index.js",
