--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongodb": "3.7"
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.2.0"
   },
   "name": "favebook-server",
   "description": "",
